<resources>
    <string name="app_name">Pixiv (beta)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="action_cloud">Cloud</string>
    <string name="action_delete_all">删除全部</string>
    <string name="action_view_detail">查看详情</string>
    <string name="original">原图:%spx*%spx</string>
    <string name="date_is">日期:%s</string>
    <string name="illust_id">作品ID：%s</string>
    <string name="author_id">画师ID：%s</string>
    <string name="author_is">作者：%s</string>
    <string name="action_edit">编辑</string>
    <string name="download">下载原图</string>
    <string name="more_files">TA的主页</string>
    <string name="author_works">作品</string>
    <string name="author_follow">关注: %s</string>
    <string name="author_followers">粉丝: %s</string>
    <string name="string_author">画师：%s</string>
    <string name="string_author_detail">%s的个人主页</string>
    <string name="string_full_size">原图尺寸：%dpx*%dpx</string>
    <string name="string_create_time">投稿时间：%s</string>
    <string name="string_viewd">%sK</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_scroll">ScrollActivity</string>
    <string name="ceuilisa">未登录</string>
    <string name="fatemercis">没有什么能展示的</string>
    <string name="main_card_title">Title goes here</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="tool_bar_title_one">Pixiv</string>
    <string name="tool_bar_title_two">Hitokoto</string>
    <string name="tool_bar_title_three">Mine</string>
    <string name="main_flat_button_1_clicked">Flat Button 1</string>
    <string name="main_flat_button_2_clicked">Flat Button 2</string>
    <string name="hitokoto_test_text">我手中的魔法，是守护挚爱的力量，是坚定这个信念所必须的力量，我一定会拯救你的，无论在何时、何地。</string>
    <string name="hitokoto_test_author">奈叶酱</string>
    <string name="hitokoto_test_source">魔法少女奈叶</string>
    <string name="hitokoto_test_date">2011.10.19 12:42:00</string>
    <string name="hitokoto_test_catname">Anime - 动画</string>
    <string name="like_it">下一个</string>
    <string name="collect_it">收藏</string>
    <!-- String related to RecyclerView -->
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="tv_recycler_item_1">Swipe down to refresh</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it and I will do some overhere</string>
    <string name="title_activity_share_view">Share View</string>
    <string name="share_view_press_it">You can press it</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="arclayout_description">《轻音少女》是由京都动画制作的电视动画，2009年4月2日开始在TBS系电视台播放。该动画改编自日本漫画家kakifly创作的同名四格漫画作品，讲述了四人女子组合在一个即将废部的轻音乐部从零开始展开音乐活动的故事。</string>
    <string name="arclayout_development">主角们上学途中沿路和快餐店，是参照京都市左京区北山通和白川通一带，而乐器店和商店街即参照了京都市中心四条河原町一带的商业区，琴吹䌷平日通学时搭乘电车与候车月台参照京都市内营运的睿山电铁出町柳站与修学院站，三年级修学旅行时当中则出现金阁寺、北野天满宫、今宫神社等京都知名历史文化建筑，主角们就读的樱丘女子高等学校，则是以滋贺县犬上郡丰乡町的町立丰乡小学旧校舍为舞台，此地后来成为了大量动画爱好者前往“圣地巡礼”的地点之一
    \n\n感谢以下朋友的热心帮助与建议：@守护世界之树，@◤康◢◤鑫◢，@MrFox
    </string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="finish_this">退出</string>
    <string name="more">More</string>
    <string name="don_t_care">Don\'t care</string>
    <string name="report">Report</string>
    <string name="turn_page">翻页</string>
    <string name="refresh">刷新</string>
    <string name="download_origin">下载原图</string>
    <string name="searchtype">搜索选项</string>
    <string name="string_rank">排行榜</string>
    <string name="get_more_files">查看更多</string>
    <string name="special">特辑</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="not_login">未登录</string>
    <string name="nothing_to_show">没有绑定邮箱账号~</string>
    <string name="title_activity_try_to_login">TryToLoginActivity</string>
    <string name="password">密码</string>
    <string name="pixiv_name">pixiv用户名/邮箱</string>
    <string name="dont_have_account">没有账号？</string>
    <string name="input_your_nico">输入你的昵称</string>
    <string name="search_for_hot">热度排序</string>
    <string name="download_oringin">下载原图</string>
    <string name="login_out">退出登录</string>
    <string name="go_to_select">这里空空的，快去搜集一言吧</string>
    <string name="about_account">设置</string>
    <string name="go_to_R18">通往新世界的大门</string>
    <string name="about_app">关于</string>
    <string name="check_comment">查看评论(%d)</string>
    <string name="check_more_comment">查看评论(%d+)</string>
    <string name="read_comment">查看评论</string>
    <string name="word_get_illust">关键词搜作品</string>
    <string name="id_get_illust">ID搜作品</string>
    <string name="word_get_user">关键词搜画师</string>
    <string name="id_get_user">ID搜画师</string>
    <string name="setting_string_one">图片详情页使用原图画质</string>
    <string name="setting_string_two">账号信息, 长按复制</string>
    <string name="quit">退出登录</string>
    <string name="download_path">下载路径</string>
    <string name="get_permission">添加可插拔SD卡读写权限</string>
    <string name="permission_state">权限状态:</string>
    <string name="ceuilisa_detail">如果觉得这款软件不错的话，请开发者们喝杯咖啡吧~</string>
    <string name="pay_way">支付宝：13990845246</string>
    <string name="public_item">筛选</string>
    <string name="public_follow">显示公开关注</string>
    <string name="private_item">显示非公开项目</string>
    <string name="private_follow">显示非公开关注</string>
    <string name="app_detail">KujouKaren Ver. %s/%d</string>
    <string name="sd_permission">如果你需要将图片下载至可插拔SD卡，请配置此选项，以便于对可插拔SD卡进行读写操作。点击上方蓝色文字开始配置，然后请选择可插拔SD卡的根目录，点击确认，使用过ES管理器的朋友一定记得这个步骤（注：图片默认下载至可插拔SD卡的某个文件夹之后，部分机型的相册可能不会更新下载的图片，只可以在文件管理器中查看，所以还是推荐朋友们把图片默认下载至不可移动的机身存储介质中）</string>
    <string name="clear_cache">清除缓存</string>
    <string name="zero_size">0.0B</string>
    <string name="has_sd_permission">已获取SD卡读写权限</string>
    <string name="no_sd_permission">无SD卡读写权限或无SD卡</string>
    <string name="followers">好P友: %d</string>
    <string name="followers_k">好P友: %dK</string>
    <string name="follow">关注: %d</string>
    <string name="follow_k">关注: %dK</string>
    <string name="sinple_illust">查看普通投稿</string>
    <string name="simple_manga">查看画集投稿</string>
    <string name="special_collection">Pixiv特辑</string>
    <string name="header_main">侧滑栏Header图片</string>
    <string name="set_header">点击设置</string>
    <string name="set_header_two">点击设置</string>
    <string name="main_theme">主题颜色</string>
    <string name="ralated_illust">相关作品</string>
    <string name="get_ralated_illust">查看更多 〉</string>
    <string name="head_image">修改头像</string>
    <string name="r18_pwd">设置神秘领域密码</string>
    <string name="sub_users">关注的画师</string>
    <string name="favor_illusts">收藏的作品</string>
    <string name="refresh_bottom">刷新</string>
    <string name="recommend_item">显示推荐项目</string>
    <string name="recommend_follow">显示推荐关注</string>
    <string name="recommend_user">推荐用户</string>
    <string name="action_download">批量下载</string>
    <string name="action_select_all">全部选择</string>
    <string name="action_start">开始</string>
    <string name="action_not_select">全部取消</string>
    <string name="batch_download">批量下载</string>
    <string name="donate_names">查看应用捐赠名单</string>
    <string name="libraries">使用到的开源库</string>
    <string name="save_edit">保存当前修改</string>
    <string name="you_are_free">零境交错</string>
    <string name="app_qun">软件交流群(882869310)，有什么问题就来群里提问吧</string>
    <string name="join_app_qun">戳这里快速加群</string>
    <string name="login_title">战场原の起点</string>
    <string name="cant_login">无法登陆看这里</string>
    <string name="no_proxy">加载失败~</string>
    <string name="private_star">成功添加到非公开收藏~</string>
    <string name="public_star">成功添加到公开收藏~</string>
    <string name="remove_star">取消收藏~</string>
    <string name="account_error">用户名或密码错误</string>
    <string name="input_pwd">密码不能为空</string>
    <string name="username_no_null">用户名不能为空</string>
    <string name="no_more_data">再怎么找也找不到了~</string>
    <string name="tranks">鸣谢</string>
    <string name="view_history">浏览历史</string>
    <string name="delete_all">删除全部历史</string>
    <string name="now_online">在线人数：获取中</string>
    <string name="enter_r18_pwd">请输入密码</string>
    <string name="now_login">登录</string>
    <string name="wrong_layout_id">未初始化布局文件</string>
    <string name="bangumi_name">番剧: 轻音少女</string>
    <string name="lover_name">K-ON</string>
    <string name="cannot_login">无法登录看这里</string>
    <string name="login_error">登录失败</string>
    <string name="refresh_token">获取登录信息</string>
    <string name="load_error">加载失败</string>
    <string name="cancel_follow_him">取消关注</string>
    <string name="follow_him">+关注</string>
    <string name="good_friend">好P友 %d</string>
    <string name="i_follow">关注 %d</string>
    <string name="operate_error">操作失败，请检查网络连接</string>
    <string name="create_error">创建失败,请检查网络连接</string>
    <string name="create_success">创建成功，正在登录</string>
    <string name="username_nonnull">用户名不能为空</string>
    <string name="select_day">选择日期</string>
</resources>
