<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/show_my_followed_users"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/sub_users" />
        <item
            android:id="@+id/show_recommend_users"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/recommend_user" />
        <item
            android:id="@+id/show_my_favorite"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/favor_illusts" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/special_collection" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/go_to_R18" />

        <item
            android:id="@+id/view_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/view_history" />

    </group>

    <group
        android:id="@+id/nav_commnunicate"
        android:title="Communicate">

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about_account" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_mood_black_24dp"
            android:title="@string/about_app" />

        <item
            android:id="@+id/thanks"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/tranks" />
    </group>

</menu>
