<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.florent37.arclayout.ArcLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_alignParentTop="true"
            android:elevation="10dip"
            app:arc_cropDirection="cropOutside"
            app:arc_height="50dp"
            app:arc_position="bottom">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/mirai" />

        </com.github.florent37.arclayout.ArcLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/arclayout_ic_add"
            app:backgroundTint="@color/colorAccent"
            app:elevation="@dimen/twelve_dip"
            app:fabSize="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diagonalLayout"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/lover_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/arclayout_description"
                android:textColor="@color/colorNavItemUnselected"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/bangumi_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/arclayout_development"
                android:textColor="@color/colorNavItemUnselected"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/be_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen_dip"
                android:autoLink="all"
                android:text="@string/you_are_free"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
