<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.example.administrator.essim.utils_re.AutoScrollRecyclerView
        android:id="@+id/recy_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.example.administrator.essim.utils_re.AutoScrollRecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.45"
        android:background="@android:color/black"/>


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="Pixiv Remaster"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:id="@+id/divider"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="79dp"
        android:layout_height="1dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_pixiv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@animator/touch_raise"
        app:cardCornerRadius="@dimen/card_recycler_elevation"
        app:cardElevation="@dimen/card_recycler_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pixiv_name"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_username"
                android:layout_marginTop="@dimen/eight_dip"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_below="@+id/card_pixiv"
        android:layout_marginStart="45dp"
        android:layout_marginTop="@dimen/sixteen_dip"
        android:layout_marginEnd="45dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@animator/touch_raise"
        app:cardCornerRadius="@dimen/card_recycler_elevation"
        app:cardElevation="@dimen/card_recycler_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_pixiv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/now_login"
            android:textColor="#2196f3"
            android:textSize="16sp" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignEnd="@+id/login"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/twelve_dip"
        android:text="@string/dont_have_account"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/card_pixiv"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="@dimen/twelve_dip"
        android:text="@string/cannot_login"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/card_pixiv"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_user" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="105dp"
        android:src="@mipmap/logo_trans"
        app:layout_constraintBottom_toTopOf="@+id/card_pixiv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


</android.support.constraint.ConstraintLayout>